# auto-kj

./: .gitignore  .lgtm.yml  .travis.yml  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CODE-REVIEW-REPORT.md  HANDOFF.md  README.md  RELEASE.md  TASKS.md  appicon.rc  build_installer.bat  package_windows.ps1
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci-multiplatform.yml  setup-deps.yml  windows-artifact.yml
cd/: auto-kj32.iss  auto-kj64.iss
debian/: changelog
docs/: USER_GUIDE.md  code-review-roger-batch-2026-04-24.md
macos/: auto-kj.plist
rpm/: auto-kj.spec
scripts/: provision-vps.sh  setup-vm.ps1
src/: CLAUDEMISSION.md  appicon.aps  appicon.rc  artistcache.cpp  artistcache.h  audiofader.cpp  audiofader.h  audiorecorder.cpp  auto-song-importer-plan.md  autobackupmanager.cpp  autobackupmanager.h  autokjserverapi.cpp  autokjserverapi.h  autokjserverclient.h  autozipper.cpp  autozipper.h  bmdbdialog.cpp  bmdbdialog.h  bmdbupdatethread.cpp  bmdbupdatethread.h  crashreporter.cpp  crashreporter.h  dbupdater.cpp  dbupdater.h  directorymonitor.cpp  dlgaddsinger.cpp  dlgaddsinger.h  dlgaddsinger.ui  dlgaddsong.ui  dlgaddvenue.cpp  dlgaddvenue.h  dlgaddvenue.ui  dlgaliasmanager.cpp  dlgaliasmanager.h  dlgcdg.cpp  dlgcdg.h  dlgcdg.ui  dlgcheckins.cpp  dlgcheckins.h  dlgcustompatterns.cpp  (+76 more)
src/cdg/: cdgimageframe.cpp  libCDG.h
src/html/: venuemap.html
src/models/: tablemodelbreaksongs.cpp  tablemodelhistorysingers.cpp  tablemodelkaraokesongs.cpp  tablemodelkaraokesongs.h  tablemodelkaraokesourcedirs.cpp  tablemodelkaraokesourcedirs.h  tablemodelplaylistsongs.cpp  tablemodelqueuesongs.cpp  tablemodelqueuesongs.h  tablemodelrequests.cpp  tablemodelrequests.h  tablemodelrotation.cpp  tablemodelrotation.h
src/streaming/: itunescontroller.cpp  itunescontroller.h  spotifycontroller.cpp  spotifycontroller.h  streamingcontroller.h  youtubemusiccontroller.cpp  youtubemusiccontroller.h
src/testing/: autokjserverclientmock.cpp  autokjserverclientmock.h
src/widgets/: qrcodewidget.cpp  qrcodewidget.h
tests/cpp/: CMakeLists.txt  test_autokj_client_integration_smoke.cpp  test_autokjserverclientmock.cpp  test_rotation_fairness.cpp
